--- a/axelor-gst/build.gradle
+++ b/axelor-gst/build.gradle
@@ -19,4 +19,5 @@ axelor {
 dependencies {
 	compile project(":modules:axelor-base")
 	compile project(":modules:axelor-account")
+	compile project(":modules:axelor-business-project")
 }
